# RayTracer13

./: .editorconfig  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
calc/: MathUtils.h  TypeDefs.h
input/: CameraSettings.cpp  CameraSettings.h  FileReader.cpp  FileReader.h  ImageSettings.cpp  ImageSettings.h  RenderConfig.h  RenderConfigDecoder.h  RenderConfigDecoderJSON.cpp  RenderConfigDecoderJSON.h  Scene.cpp  Scene.h  SceneDecoderJSON.cpp  SceneDecoderJSON.h  Settings.cpp  Settings.h  VRSceneDecoder.h
lib/rapidjson/: rapidjson.cmake
output/ppm/: PPMColor.h  PPMImage.cpp  PPMImage.h  PPMImageFileWriter.cpp  PPMImageFileWriter.h  PPMImageMeta.cpp  PPMImageMeta.h  PPMImageWriter.cpp  PPMImageWriter.h
sampling/: AABB.h  AABBTree.h  Camera.cpp  Camera.h  IntersectionData.h  Light.h  Lighting.h  Material.h  Object.cpp  Object.h  Ray.h  Raygen.h  Shaders.h  Tracer.h  Triangle.cpp  Triangle.h  Vertex.h
scenes/basic/: scene1.crtscene
scenes/final/: scene03.crtscene  scene04.crtscene  scene5.crtscene
scenes/light/: scene1.crtscene  scene2.crtscene  scene3.crtscene
scenes/shading-1/: scene5.crtscene
scenes/shading-2/: scene0.crtscene  scene3.crtscene  scene6.crtscene
